--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <title>failboat</title>
 
     <!-- Place favicon.ico in the root directory -->
-    <link href='http://fonts.googleapis.com/css?family=Jura:400,600' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Jura:100,400,600,900' rel='stylesheet' type='text/css'>
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -25,20 +25,19 @@
   </head>
   <body class="bg-white marginBottom50">
     
+<!-- HEADER -->
     <div class="container">
       <div class="header">
-        <!-- <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul> -->
         <h3 class="text-muted">failboat</h3>
       </div>
 
+<!-- JUMBOTRON -->
       <div class="jumbotron padding10">
         <h1>welcome to failboat styling</h1>
         <p class="lead">in a land where css dies, and classes rise</p>
       </div>
+
+<!-- BACKGROUND COLORS -->
       <div class="row">
           <div class="col-xs-12"><h3 class="text-bold">Background Coloration</h3></div>
       </div>
@@ -67,9 +66,11 @@
                 </div>
               </div>
           </div>
-      </div>
+
+
+<!-- FONT COLORS -->
       <div class="row marginTop40">
-          <div class="col-xs-12"><h3 class="text-bold">Text Coloration</h3></div>
+          <div class="col-xs-12"><h3 class="text-bold">Font Coloration</h3></div>
       </div>
       <div class="row">
         <div class="col-xs-12 text-bold">
@@ -96,6 +97,96 @@
               </div>
             </div>
           </div>
+      </div>
+    </div>
+
+<!-- TEXT HIGHLIGHTING -->
+      <div class="row marginTop40">
+          <div class="col-xs-12"><h3 class="text-bold">Text Highlighting</h3></div>
+      </div>
+      <div class="row">
+        <div class="col-xs-6 text-bold">
+          <div class="text-highlight-yellow text-highlight-hover">yellow - warning perhaps?</div>
+          <div class="text-highlight-green text-highlight-hover marginTop4 text-center">green - success maybe?</div>
+          <div class="text-highlight-teal text-highlight-hover marginTop4 text-right">teal - new offer!</div>
+          <div class="text-highlight-blue text-highlight-hover marginTop4 text-center">blue - inform the user?</div>
+          <div class="text-highlight-purple text-highlight-hover marginTop4">purple - royal message!</div>
+        </div>
+        <div class="col-xs-6 text-bold">
+          <div class="text-highlight-pink text-highlight-hover text-right">pink - girl power!</div>
+          <div class="text-highlight-red text-highlight-hover marginTop4 text-center">red - error "o noes"</div>
+          <div class="text-highlight-orange text-highlight-hover marginTop4">orange - pumpkin chuckin`!</div>
+          <div class="text-highlight-gray text-highlight-hover marginTop4 text-center">gray - subliminal messaging ;)</div>
+          <div class="text-highlight-blackish text-highlight-hover marginTop4 text-right">blackish - the other dark messager</div>
+        </div>
+      </div>
+      <div class="row paddingLeft20 paddingRight20 marginTop20">
+          <div class="col-xs-4 code-block-alt ">&lt;div class="<b>text-highlight-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br />&lt;/div&gt;</div>
+          <div class="col-xs-1 text-size30 text-bold text-center marginTop25">></div>
+          <div class="col-xs-7">
+            <div class="row marginTop10">
+              <div class="col-xs-12 lineHeight150">
+                Color list also includes: white, whitish, black<br/>
+                <span class="text-highlight-yellow">text-highlight-@color</span> <b>#</b> add color keyword listed above to highlight. <br/>
+                <span class="text-highlight-yellow">text-highlight-hover</span> <b>#</b> enables font to darken on hover<br/>
+              </div>
+            </div>
+          </div>
+      </div>
+
+<!-- FONT ALTERATION -->
+      <div class="row marginTop40">
+          <div class="col-xs-12"><h3 class="text-bold">Font Alterations</h3></div>
+      </div>
+      <div class="row lineHeight200">
+        <div class="col-xs-3 text-bold border-simple-gray">
+          Line Height 0%-250%<br/>
+          Increments of 25%<br/>
+          This for example is 200%<br/>
+        </div>
+        <div class="col-xs-3 text-bold  border-simple-gray">
+          <p class="marginBottom0 ">Font Size</p>
+          <p class="marginBottom0 text-center">Ranging 1px-50px</p>
+          <p class="marginBottom0 text-size20">This is 20px</p>
+        </div>
+        <div class="col-xs-3 text-bold border-simple-gray">
+          Letter Spacing<br/>
+          -5px to 10px<br/>
+          <span class="letterSpacing5">This is 5px</span>
+        </div>
+        <div class="col-xs-3 text-bold border-simple-gray">
+          Font Weight<br/>
+          <span class="text-light">Light</span>, <span class="text-normal">Normal</span>,<br/>
+          <span class="text-medium">Medium</span>, <span class="text-bold">Bold</span>
+        </div>
+      </div>
+      <div class="row marginTop20">
+        <div class="col-xs-3 text-bold code-block-alt">
+          &lt;div class="<b>lineHeight200</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;This for example is 200%<br />&lt;/div&gt;
+        </div>
+        <div class="col-xs-3 text-bold  code-block-alt">
+          &lt;div class="<b>text-size20</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;This is 20px<br />&lt;/div&gt;
+        </div>
+        <div class="col-xs-3 text-bold code-block-alt ">
+           &lt;div class="<b>letterSpacing5</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;This is 5px.<br />&lt;/div&gt;
+        </div>
+        <div class="col-xs-3 text-bold code-block-alt">
+          &lt;div class="<b>text-bold</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Bold<br />&lt;/div&gt;
+        </div>
+      </div>
+      <div class="row marginTop20">
+        <div class="col-xs-3 text-bold">
+          <span class="text-highlight-yellow">lineHeight@value</span><br/> <b>#</b> adjust line height %, the space between lines of text
+        </div>
+        <div class="col-xs-3 text-bold ">
+          <span class="text-highlight-yellow">text-size@value</span><br/> <b>#</b> change the font size automagically
+        </div>
+        <div class="col-xs-3 text-bold ">
+           <span class="text-highlight-yellow">letterSpacing@value</span> <br/> <b>#</b>adjust letter-spacing, ranging -5px to 10px
+        </div>
+        <div class="col-xs-3 text-bold">
+          <span class="text-highlight-yellow">text-@weight</span> <br/><b>#</b> change font thickness by adding weight you choose
+        </div>
       </div>
     </div>
     <!-- build:js scripts/vendor.js -->
