--- a/app/index.html
+++ b/app/index.html
@@ -55,19 +55,18 @@
        </div>
       </div>
       <div class="row paddingLeft20 paddingRight20 paddingTop20">
-          <div class="col-xs-4 code-block-alt">&lt;div class="<b>bg-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br/>&lt;/div&gt;</div>
-          <div class="col-xs-1 marginTop25 text-size30 text-bold text-center">></div>
-          <div class="col-xs-7 ">
-              <div class="row marginTop15">
-                <div class="col-xs-12 lineHeight150">
-                Color list also includes: white, whitish, black, blackish<br/>
-                  <span class="text-highlight-yellow">bg-@color</span> <b>#</b> uadd color keyword listed above to change background color. 
-                  <span class="text-highlight-yellow">bg-hover</span> <b>#</b> enables background to darken on hover<br/>
-                </div>
-              </div>
+        <div class="col-xs-4 code-block-alt">&lt;div class="<b>bg-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br/>&lt;/div&gt;</div>
+        <div class="col-xs-1 marginTop25 text-size30 text-bold text-center">></div>
+        <div class="col-xs-7 ">
+          <div class="row marginTop15">
+            <div class="col-xs-12 lineHeight150">
+            Color list also includes: white, whitish, black, blackish<br/>
+              <span class="text-highlight-yellow">bg-@color</span> <b>#</b> uadd color keyword listed above to change background color. 
+              <span class="text-highlight-yellow">bg-hover</span> <b>#</b> enables background to darken on hover<br/>
+            </div>
           </div>
-
-
+      </div>
+    </div>
 <!-- FONT COLORS -->
       <div class="row marginTop40">
           <div class="col-xs-12"><h3 class="text-bold">Font Coloration</h3></div>
@@ -86,18 +85,17 @@
         </div>
       </div>
       <div class="row paddingLeft20 paddingRight20 marginTop20">
-          <div class="col-xs-4 code-block-alt ">&lt;div class="<b>text-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br />&lt;/div&gt;</div>
-          <div class="col-xs-1 text-size30 text-bold text-center marginTop25">></div>
-          <div class="col-xs-7">
-            <div class="row marginTop10">
-              <div class="col-xs-12 lineHeight150">
-                Color list also includes: white, whitish, black, blackish<br/>
-                <span class="text-highlight-yellow">text-@color</span> <b>#</b> add color keyword listed above to change font color. <br/>
-                <span class="text-highlight-yellow">text-hover</span> <b>#</b> enables font to darken on hover<br/>
-              </div>
+        <div class="col-xs-4 code-block-alt ">&lt;div class="<b>text-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br />&lt;/div&gt;</div>
+        <div class="col-xs-1 text-size30 text-bold text-center marginTop25">></div>
+        <div class="col-xs-7">
+          <div class="row marginTop10">
+            <div class="col-xs-12 lineHeight150">
+              Color list also includes: white, whitish, black, blackish<br/>
+              <span class="text-highlight-yellow">text-@color</span> <b>#</b> add color keyword listed above to change font color. <br/>
+              <span class="text-highlight-yellow">text-hover</span> <b>#</b> enables font to darken on hover<br/>
             </div>
           </div>
-      </div>
+        </div>
     </div>
 
 <!-- TEXT HIGHLIGHTING -->
@@ -121,28 +119,33 @@
         </div>
       </div>
       <div class="row paddingLeft20 paddingRight20 marginTop20">
-          <div class="col-xs-4 code-block-alt ">&lt;div class="<b>text-highlight-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br />&lt;/div&gt;</div>
-          <div class="col-xs-1 text-size30 text-bold text-center marginTop25">></div>
-          <div class="col-xs-7">
-            <div class="row marginTop10">
-              <div class="col-xs-12 lineHeight150">
-                Color list also includes: white, whitish, black<br/>
-                <span class="text-highlight-yellow">text-highlight-@color</span> <b>#</b> add color keyword listed above to highlight. <br/>
-                <span class="text-highlight-yellow">text-highlight-hover</span> <b>#</b> enables font to darken on hover<br/>
-              </div>
+        <div class="col-xs-4 code-block-alt ">&lt;div class="<b>text-highlight-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br />&lt;/div&gt;</div>
+        <div class="col-xs-1 text-size30 text-bold text-center marginTop25">></div>
+        <div class="col-xs-7">
+          <div class="row marginTop10">
+            <div class="col-xs-12 lineHeight150">
+              Color list also includes: white, whitish, black<br/>
+              <span class="text-highlight-yellow">text-highlight-@color</span> <b>#</b> add color keyword listed above to highlight. <br/>
+              <span class="text-highlight-yellow">text-highlight-hover</span> <b>#</b> enables font to darken on hover<br/>
             </div>
           </div>
-      </div>
+        </div>
+      </div> 
 
 <!-- FONT ALTERATION -->
       <div class="row marginTop40">
           <div class="col-xs-12"><h3 class="text-bold">Font Alterations</h3></div>
       </div>
-      <div class="row lineHeight200">
+      <div class="row lineHeight200 paddingLeft20 paddingRight20">
         <div class="col-xs-3 text-bold border-simple-gray">
           Line Height 0%-250%<br/>
           Increments of 25%<br/>
           This for example is 200%<br/>
+        </div>
+        <div class="col-xs-3 text-bold border-simple-gray">
+          Letter Spacing<br/>
+          -5px to 10px<br/>
+          <span class="letterSpacing5">This is 5px</span>
         </div>
         <div class="col-xs-3 text-bold  border-simple-gray">
           <p class="marginBottom0 ">Font Size</p>
@@ -150,44 +153,85 @@
           <p class="marginBottom0 text-size20">This is 20px</p>
         </div>
         <div class="col-xs-3 text-bold border-simple-gray">
-          Letter Spacing<br/>
-          -5px to 10px<br/>
-          <span class="letterSpacing5">This is 5px</span>
-        </div>
-        <div class="col-xs-3 text-bold border-simple-gray">
           Font Weight<br/>
           <span class="text-light">Light</span>, <span class="text-normal">Normal</span>,<br/>
           <span class="text-medium">Medium</span>, <span class="text-bold">Bold</span>
         </div>
       </div>
-      <div class="row marginTop20">
+      <div class="row marginTop20 paddingLeft20 paddingRight20">
         <div class="col-xs-3 text-bold code-block-alt">
           &lt;div class="<b>lineHeight200</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;This for example is 200%<br />&lt;/div&gt;
         </div>
+        <div class="col-xs-3 text-bold code-block-alt letterSpacing0">
+           &lt;div class="<b>letterSpacing5</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;This is 5px.<br />&lt;/div&gt;
+        </div>
         <div class="col-xs-3 text-bold  code-block-alt">
           &lt;div class="<b>text-size20</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;This is 20px<br />&lt;/div&gt;
-        </div>
-        <div class="col-xs-3 text-bold code-block-alt ">
-           &lt;div class="<b>letterSpacing5</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;This is 5px.<br />&lt;/div&gt;
         </div>
         <div class="col-xs-3 text-bold code-block-alt">
           &lt;div class="<b>text-bold</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Bold<br />&lt;/div&gt;
         </div>
       </div>
-      <div class="row marginTop20">
+      <div class="row marginTop20 paddingLeft20 paddingRight20">
         <div class="col-xs-3 text-bold">
           <span class="text-highlight-yellow">lineHeight@value</span><br/> <b>#</b> adjust line height %, the space between lines of text
         </div>
         <div class="col-xs-3 text-bold ">
-          <span class="text-highlight-yellow">text-size@value</span><br/> <b>#</b> change the font size automagically
+           <span class="text-highlight-yellow">letterSpacing@value</span> <br/> <b>#</b>adjust letter-spacing, ranging -5px to 10px
         </div>
         <div class="col-xs-3 text-bold ">
-           <span class="text-highlight-yellow">letterSpacing@value</span> <br/> <b>#</b>adjust letter-spacing, ranging -5px to 10px
+          <span class="text-highlight-yellow">text-size@value</span><br/> <b>#</b> change the font size automagically
         </div>
         <div class="col-xs-3 text-bold">
           <span class="text-highlight-yellow">text-@weight</span> <br/><b>#</b> change font thickness by adding weight you choose
         </div>
       </div>
+<!-- SCALE TEXT -->
+      <div class="row marginTop40">
+          <div class="col-xs-12"><h3 class="text-bold">Scale Text</h3></div>
+      </div>
+      <div class="row paddingLeft20 paddingRight20">
+        <div class="col-xs-3 text-bold border-simple-gray text-center">
+          Large [lg]<br/>
+          <p class="text-size50 lineHeight75">Desktop</p>
+          <p class="text-size45 lineHeight75">Laptop</p>
+          <p class="text-size40 lineHeight100">Tablet</p>
+          <p class="text-size35 lineHeight75">Phone</p>
+        </div>
+        <div class="col-xs-3 text-bold  border-simple-gray text-center">
+          Medium [md]<br/>
+          <p class="text-size40 lineHeight100">Desktop</p>
+          <p class="text-size35 lineHeight75">Laptop</p>
+          <p class="text-size30 lineHeight100">Tablet</p>
+          <p class="text-size25 lineHeight75">Phone</p>
+        </div>
+        <div class="col-xs-3 text-bold  border-simple-gray text-center">
+          Standard [sd]<br/>
+          <p class="text-size15 lineHeight200">Desktop</p>
+          <p class="text-size15 lineHeight100">Laptop</p>
+          <p class="text-size14 lineHeight200">Tablet</p>
+          <p class="text-size14 lineHeight75">Phone</p>
+        </div>
+        <div class="col-xs-3 text-bold  border-simple-gray text-center">
+          Small [sm]<br/>
+          <p class="text-size13 lineHeight175">Desktop</p>
+          <p class="text-size12 lineHeight50">Laptop</p>
+          <p class="text-size11 lineHeight200">Tablet</p>
+          <p class="text-size10 lineHeight25">Phone</p>
+        </div>
+      </div>
+      <div class="row paddingLeft20 paddingRight20 paddingTop20">
+        <div class="col-xs-4 code-block-alt">&lt;div class="<b>scale-text-lg</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Desktop<br/>&nbsp;&nbsp;&nbsp;...<br/>&lt;/div&gt;</div>
+        <div class="col-xs-1 marginTop25 text-size30 text-bold text-center">></div>
+        <div class="col-xs-7 ">
+          <div class="row marginTop15">
+            <div class="col-xs-12 lineHeight150">
+              Allow your text to scale on your users device, media queries set at 0px, 720px, 960px, 1099px. <br/>
+              <span class="text-highlight-yellow">scale-text-@size</span> <b>#</b> use size <b>lg</b>, <b>md</b>, <b>sd</b> &<b>sm</b> for @size 
+            </div>
+          </div>
+      </div>
+    </div>
     </div>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
