--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,14 @@
       </div>
 
 <!-- JUMBOTRON -->
-      <div class="jumbotron padding10">
-        <h1>welcome to failboat styling</h1>
-        <p class="lead">in a land where css dies, and classes rise</p>
+      <div class="bg-blackish text-white padding30" style="height:170px;">
+          <div class="square bg-white paddingLeft25 paddingBottom20 marginRight30 border-simple-red" style="width:200px; height:120px;">
+            <img src="./images/failboat1.png" class="float-left " width="150px" />
+          </div>
+          <div class="float-left">
+            <h1>enjoy, failboat stylee</h1>
+            <p class="lead">in a land where css dies, and classes rise</p>
+          </div>
       </div>
 
 <!-- BACKGROUND COLORS -->
@@ -222,11 +227,11 @@
       </div>
       <div class="row paddingLeft20 paddingRight20 paddingTop20">
         <div class="col-xs-4 code-block-alt">&lt;div class="<b>scale-text-lg</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Desktop<br/>&nbsp;&nbsp;&nbsp;...<br/>&lt;/div&gt;</div>
-        <div class="col-xs-1 marginTop25 text-size30 text-bold text-center">></div>
+        <div class="col-xs-1 marginTop30 text-size30 text-bold text-center">></div>
         <div class="col-xs-7 ">
-          <div class="row marginTop15">
+          <div class="row marginTop20">
             <div class="col-xs-12 lineHeight150">
-              Allow your text to scale on your users device, media queries set at 0px, 720px, 960px, 1099px. <br/>
+              Allow your text to scale on your users device, media queries set at 0px, 768px, 900px, 1024px. <br/>
               <span class="text-highlight-yellow">scale-text-@size</span> <b>#</b> use size <b>lg</b>, <b>md</b>, <b>sd</b> &<b>sm</b> for @size 
             </div>
           </div>
