--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
           <div class="row marginTop15">
             <div class="col-xs-12 lineHeight150">
             Color list also includes: white, whitish, black, blackish<br/>
-              <span class="text-highlight-yellow">bg-@color</span> <b>#</b> uadd color keyword listed above to change background color. 
+              <span class="text-highlight-yellow">bg-@color</span> <b>#</b> uadd color keyword listed above to change background color. <Br/>
               <span class="text-highlight-yellow">bg-hover</span> <b>#</b> enables background to darken on hover<br/>
             </div>
           </div>
