--- a/app/index.html
+++ b/app/index.html
@@ -33,18 +33,20 @@
 
 <!-- JUMBOTRON -->
       <div class="bg-blackish text-white padding30" style="height:170px;">
-          <div class="square bg-white paddingLeft25 paddingBottom20 marginRight30 border-simple-red" style="width:200px; height:120px;">
-            <img src="./images/failboat1.png" class="float-left " width="150px" />
-          </div>
-          <div class="float-left">
-            <h1>enjoy, failboat stylee</h1>
-            <p class="lead">in a land where css dies, and classes rise</p>
-          </div>
+        <div class="square bg-white paddingLeft25 paddingBottom20 marginRight30 border-simple-red" style="width:200px; height:120px;">
+          <img src="./images/failboat1.png" class="float-left " width="150px" />
+        </div>
+        <div class="float-left">
+          <h1>enjoy, failboat stylee</h1>
+          <p class="lead">in a land where css dies, and classes rise</p>
+        </div>
       </div>
 
 <!-- BACKGROUND COLORS -->
       <div class="row">
-          <div class="col-xs-12"><h3 class="text-bold">Background Coloration</h3></div>
+        <div class="col-xs-12">
+          <h3 class="text-bold text-underline">Background Coloration</h3>
+        </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
@@ -60,12 +62,16 @@
        </div>
       </div>
       <div class="row paddingLeft20 paddingRight20 paddingTop20">
-        <div class="col-xs-4 code-block-alt">&lt;div class="<b>bg-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br/>&lt;/div&gt;</div>
-        <div class="col-xs-1 marginTop30 text-size30 text-bold text-center">></div>
+        <div class="col-xs-4 code-block-alt">
+          &lt;div class="<b>bg-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br/>&lt;/div&gt;
+        </div>
+        <div class="col-xs-1 marginTop30 text-size30 text-bold text-center">
+          >
+        </div>
         <div class="col-xs-7 ">
           <div class="row marginTop20">
             <div class="col-xs-12 lineHeight150">
-            Color list also includes: white, whitish, black, blackish<br/>
+              Color list also includes: white, whitish, black, blackish<br/>
               <span class="text-highlight-yellow">bg-@color</span> <b>#</b> uadd color keyword listed above to change background color. <Br/>
               <span class="text-highlight-yellow">bg-hover</span> <b>#</b> enables background to darken on hover<br/>
             </div>
@@ -74,7 +80,9 @@
     </div>
 <!-- FONT COLORS -->
       <div class="row marginTop40">
-          <div class="col-xs-12"><h3 class="text-bold">Font Coloration</h3></div>
+        <div class="col-xs-12">
+          <h3 class="text-bold text-underline">Font Coloration</h3>
+        </div>
       </div>
       <div class="row">
         <div class="col-xs-12 text-bold">
@@ -90,8 +98,12 @@
         </div>
       </div>
       <div class="row paddingLeft20 paddingRight20 marginTop20">
-        <div class="col-xs-4 code-block-alt ">&lt;div class="<b>text-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br />&lt;/div&gt;</div>
-        <div class="col-xs-1 text-size30 text-bold text-center marginTop25">></div>
+        <div class="col-xs-4 code-block-alt ">
+          &lt;div class="<b>text-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br />&lt;/div&gt;
+        </div>
+        <div class="col-xs-1 text-size30 text-bold text-center marginTop25">
+          >
+        </div>
         <div class="col-xs-7">
           <div class="row marginTop10">
             <div class="col-xs-12 lineHeight150">
@@ -101,11 +113,13 @@
             </div>
           </div>
         </div>
-    </div>
+      </div>
 
 <!-- TEXT HIGHLIGHTING -->
       <div class="row marginTop40">
-          <div class="col-xs-12"><h3 class="text-bold">Text Highlighting</h3></div>
+        <div class="col-xs-12">
+          <h3 class="text-bold text-underline">Text Highlighting</h3>
+        </div>
       </div>
       <div class="row">
         <div class="col-xs-6 text-bold">
@@ -124,8 +138,12 @@
         </div>
       </div>
       <div class="row paddingLeft20 paddingRight20 marginTop20">
-        <div class="col-xs-4 code-block-alt ">&lt;div class="<b>text-highlight-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br />&lt;/div&gt;</div>
-        <div class="col-xs-1 text-size30 text-bold text-center marginTop25">></div>
+        <div class="col-xs-4 code-block-alt ">
+          &lt;div class="<b>text-highlight-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br />&lt;/div&gt;
+        </div>
+        <div class="col-xs-1 text-size30 text-bold text-center marginTop25">
+          >
+        </div>
         <div class="col-xs-7">
           <div class="row marginTop10">
             <div class="col-xs-12 lineHeight150">
@@ -139,7 +157,9 @@
 
 <!-- FONT ALTERATION -->
       <div class="row marginTop40">
-          <div class="col-xs-12"><h3 class="text-bold">Font Alterations</h3></div>
+        <div class="col-xs-12">
+          <h3 class="text-bold text-underline">Font Alterations</h3>
+        </div>
       </div>
       <div class="row lineHeight200 paddingLeft20 paddingRight20">
         <div class="col-xs-3 text-bold border-simple-gray">
@@ -182,7 +202,7 @@
           <span class="text-highlight-yellow">lineHeight@value</span><br/> <b>#</b> adjust line height %, the space between lines of text
         </div>
         <div class="col-xs-3 text-bold ">
-           <span class="text-highlight-yellow">letterSpacing@value</span> <br/> <b>#</b>adjust letter-spacing, ranging -5px to 10px
+          <span class="text-highlight-yellow">letterSpacing@value</span> <br/> <b>#</b>adjust letter-spacing, ranging -5px to 10px
         </div>
         <div class="col-xs-3 text-bold ">
           <span class="text-highlight-yellow">text-size@value</span><br/> <b>#</b> change the font size automagically
@@ -193,7 +213,9 @@
       </div>
 <!-- SCALE TEXT -->
       <div class="row marginTop40">
-          <div class="col-xs-12"><h3 class="text-bold">Scale Text</h3></div>
+        <div class="col-xs-12">
+          <h3 class="text-bold text-underline">Scale Text</h3>
+        </div>
       </div>
       <div class="row paddingLeft20 paddingRight20">
         <div class="col-xs-3 text-bold border-simple-gray text-center">
@@ -226,8 +248,12 @@
         </div>
       </div>
       <div class="row paddingLeft20 paddingRight20 paddingTop20">
-        <div class="col-xs-4 code-block-alt">&lt;div class="<b>scale-text-lg</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Desktop<br/>&nbsp;&nbsp;&nbsp;...<br/>&lt;/div&gt;</div>
-        <div class="col-xs-1 marginTop30 text-size30 text-bold text-center">></div>
+        <div class="col-xs-4 code-block-alt">
+          &lt;div class="<b>scale-text-lg</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Desktop<br/>&nbsp;&nbsp;&nbsp;...<br/>&lt;/div&gt;
+        </div>
+        <div class="col-xs-1 marginTop30 text-size30 text-bold text-center">
+          >
+        </div>
         <div class="col-xs-7 ">
           <div class="row marginTop20">
             <div class="col-xs-12 lineHeight150">
@@ -237,7 +263,63 @@
           </div>
       </div>
     </div>
+  <!-- FONT COLORS -->
+    <div class="row marginTop40">
+      <div class="col-xs-12">
+        <h3 class="text-bold text-underline">Borders</h3>
+      </div>
     </div>
+    <div class="row paddingLeft20 paddingRight20">
+      <div class="col-xs-3 text-bold border-simple-pink text-right">
+        Simple Borders<br/>
+        use any of the colors<br/>
+        1px solid color
+      </div>
+      <div class="col-xs-3 text-bold text-center border-simple-black border-remove-left border-remove-right">
+        Border Side<br/>
+        this box only<br/>
+        has top and bottom
+      </div>
+      <div class="col-xs-3 text-bold lineHeight125 border-color-green border-style-solid text-center border-size-8">
+        Border Width/Color<br/>
+        thickness 1px-20px<br/>
+        use any of the colors
+      </div>
+      <div class="col-xs-3 text-bold  border-simple-blue border-style-dashed">
+        Border Style<br/>
+        use any of the <br/>
+        10 border styles
+      </div>
+    </div>
+    <div class="row marginTop20 paddingLeft20 paddingRight20 letterSpacing0">
+      <div class="col-xs-3 text-bold code-block-alt">
+        &lt;div class="<br/><b>simple-border-pink</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Simplest border<br />&lt;/div&gt;
+      </div>
+      <div class="col-xs-3 text-bold code-block-alt ">
+         &lt;div class="<br/><b>simple-border-black <br/>border-remove-left<br/> border-remove-right</b>"&gt;<br/>&lt;/div&gt;
+      </div>
+      <div class="col-xs-3 text-bold  code-block-alt">
+        &lt;div class="<br/><b>border-color-green <br/>border-style-solid <br/>border-size-8</b>"&gt;<br/>&lt;/div&gt;
+      </div>
+      <div class="col-xs-3 text-bold code-block-alt">
+        &lt;div class="<b>text-bold</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Bold<br />&lt;/div&gt;
+      </div>
+    </div>
+    <div class="row marginTop20 paddingLeft20 paddingRight20">
+      <div class="col-xs-3 text-bold">
+        <span class="text-highlight-yellow">lineHeight@value</span><br/> <b>#</b> adjust line height %, the space between lines of text
+      </div>
+      <div class="col-xs-3 text-bold ">
+        <span class="text-highlight-yellow">letterSpacing@value</span> <br/> <b>#</b>adjust letter-spacing, ranging -5px to 10px
+      </div>
+      <div class="col-xs-3 text-bold ">
+        <span class="text-highlight-yellow">text-size@value</span><br/> <b>#</b> change the font size automagically
+      </div>
+      <div class="col-xs-3 text-bold">
+        <span class="text-highlight-yellow">text-@weight</span> <br/><b>#</b> change font thickness by adding weight you choose
+      </div>
+    </div>
+  </div>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
