--- a/app/index.html
+++ b/app/index.html
@@ -302,21 +302,22 @@
         &lt;div class="<br/><b>border-color-green <br/>border-style-solid <br/>border-size-8</b>"&gt;<br/>&lt;/div&gt;
       </div>
       <div class="col-xs-3 text-bold code-block-alt">
-        &lt;div class="<b>text-bold</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Bold<br />&lt;/div&gt;
+        &lt;div class="<br/><b>border-simple=blue<br/>border-style-dashed</b>"&gt;<br/>&lt;/div&gt;
       </div>
     </div>
     <div class="row marginTop20 paddingLeft20 paddingRight20">
       <div class="col-xs-3 text-bold">
-        <span class="text-highlight-yellow">lineHeight@value</span><br/> <b>#</b> adjust line height %, the space between lines of text
+        <span class="text-highlight-yellow">simple-border-@color</span><br/> <b>#</b> add a 1px solid border of you chosen color
       </div>
       <div class="col-xs-3 text-bold ">
-        <span class="text-highlight-yellow">letterSpacing@value</span> <br/> <b>#</b>adjust letter-spacing, ranging -5px to 10px
+        <span class="text-highlight-yellow">border-remove-@side</span> <br/> <b>#</b>remove any of border(s): top, bottom, left, right
       </div>
       <div class="col-xs-3 text-bold ">
-        <span class="text-highlight-yellow">text-size@value</span><br/> <b>#</b> change the font size automagically
+        <span class="text-highlight-yellow">border-size-@value</span><br/> <b>#</b> set the border thickness<br/>
+        <span class="text-highlight-yellow">border-color-@color</span><br/> <b>#</b> set the border color
       </div>
       <div class="col-xs-3 text-bold">
-        <span class="text-highlight-yellow">text-@weight</span> <br/><b>#</b> change font thickness by adding weight you choose
+        <span class="text-highlight-yellow">border-style-@style</span> <br/><b>#</b> change the border style, supports all ten styles
       </div>
     </div>
   </div>
