--- a/app/index.html
+++ b/app/index.html
@@ -49,16 +49,16 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
-          <div class="text-hover  marginRight4 bg-hover bg-yellow paddingTop40 square text-gray text-center">yellow</div>
-          <div class="text-hover marginRight4 bg-hover bg-green paddingTop40  square text-white text-center">green</div>
-          <div class="text-hover marginRight4 bg-hover bg-teal paddingTop40  square text-white text-center">teal</div>
-          <div class="text-hover marginRight4 bg-hover bg-blue paddingTop40  square text-white text-center">blue</div>
-          <div class="text-hover marginRight4 bg-hover bg-purple paddingTop40  square text-white text-center">purple</div>
-          <div class="text-hover marginRight4 bg-hover bg-pink paddingTop40  square text-white text-center">pink</div>
-          <div class="text-hover marginRight4 bg-hover bg-red paddingTop40  square text-white text-center">red</div>
-          <div class="text-hover marginRight4 bg-hover bg-orange paddingTop40  square text-white text-center">orange</div>
-          <div class="text-hover marginRight4 bg-hover bg-gray paddingTop40  square text-white text-center">gray</div>
+        <div class="col-xs-12 text-center">
+          <div class="text-hover  marginRight4 bg-hover bg-yellow paddingTop40 square text-gray">yellow</div>
+          <div class="text-hover marginRight4 bg-hover bg-green paddingTop40  square text-white">green</div>
+          <div class="text-hover marginRight4 bg-hover bg-teal paddingTop40  square text-white">teal</div>
+          <div class="text-hover marginRight4 bg-hover bg-blue paddingTop40  square text-white">blue</div>
+          <div class="text-hover marginRight4 bg-hover bg-purple paddingTop40  square text-white">purple</div>
+          <div class="text-hover marginRight4 bg-hover bg-pink paddingTop40  square text-white">pink</div>
+          <div class="text-hover marginRight4 bg-hover bg-red paddingTop40  square text-white">red</div>
+          <div class="text-hover marginRight4 bg-hover bg-orange paddingTop40  square text-white">orange</div>
+          <div class="text-hover marginRight4 bg-hover bg-gray paddingTop40  square text-white">gray</div>
        </div>
       </div>
       <div class="row paddingLeft20 paddingRight20 paddingTop20">
@@ -85,16 +85,16 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 text-bold">
-          <div class="marginLeft4 float-left marginRight50 text-yellow text-center">yellow</div>
-          <div class="marginRight50 float-left text-hover text-green text-center">green</div>
-          <div class="marginRight50 float-left text-hover text-teal text-center">teal</div>
-          <div class="marginRight50 float-left text-hover text-blue text-center">blue</div>
-          <div class="marginRight50 float-left text-hover text-purple text-center">purple</div>
-          <div class="marginRight50 float-left text-hover text-pink text-center">pink</div>
-          <div class="marginRight50 float-left text-hover text-red text-center">red</div>
-          <div class="marginRight50 float-left text-hover text-orange text-center">orange</div>
-          <div class="marginRight50 float-left text-hover text-gray text-center">gray</div>
+        <div class="col-xs-12 text-bold text-center">
+          <div class="marginLeft4 float-left marginRight50 text-yellow">yellow</div>
+          <div class="marginRight50 float-left text-hover text-green">green</div>
+          <div class="marginRight50 float-left text-hover text-teal">teal</div>
+          <div class="marginRight50 float-left text-hover text-blue">blue</div>
+          <div class="marginRight50 float-left text-hover text-purple">purple</div>
+          <div class="marginRight50 float-left text-hover text-pink">pink</div>
+          <div class="marginRight50 float-left text-hover text-red">red</div>
+          <div class="marginRight50 float-left text-hover text-orange">orange</div>
+          <div class="marginRight50 float-left text-hover text-gray">gray</div>
         </div>
       </div>
       <div class="row paddingLeft20 paddingRight20 marginTop20">
@@ -161,53 +161,53 @@
           <h3 class="text-bold text-underline">Font Alterations</h3>
         </div>
       </div>
-      <div class="row lineHeight200 paddingLeft20 paddingRight20">
-        <div class="col-xs-3 text-bold border-simple-gray">
+      <div class="row lineHeight200 paddingLeft20 paddingRight20 text-bold">
+        <div class="col-xs-3 border-simple-gray">
           Line Height 0%-250%<br/>
           Increments of 25%<br/>
           This for example is 200%<br/>
         </div>
-        <div class="col-xs-3 text-bold border-simple-gray">
+        <div class="col-xs-3 border-simple-gray">
           Letter Spacing<br/>
           -5px to 10px<br/>
           <span class="letterSpacing5">This is 5px</span>
         </div>
-        <div class="col-xs-3 text-bold  border-simple-gray">
+        <div class="col-xs-3  border-simple-gray">
           <p class="marginBottom0 ">Font Size</p>
           <p class="marginBottom0 text-center">Ranging 1px-50px</p>
           <p class="marginBottom0 text-size20">This is 20px</p>
         </div>
-        <div class="col-xs-3 text-bold border-simple-gray">
+        <div class="col-xs-3 border-simple-gray">
           Font Weight<br/>
           <span class="text-light">Light</span>, <span class="text-normal">Normal</span>,<br/>
           <span class="text-medium">Medium</span>, <span class="text-bold">Bold</span>
         </div>
       </div>
-      <div class="row marginTop20 paddingLeft20 paddingRight20">
-        <div class="col-xs-3 text-bold code-block-alt">
+      <div class="row marginTop20 paddingLeft20 paddingRight20 text-bold">
+        <div class="col-xs-3 code-block-alt">
           &lt;div class="<b>lineHeight200</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;This for example is 200%<br />&lt;/div&gt;
         </div>
-        <div class="col-xs-3 text-bold code-block-alt letterSpacing0">
+        <div class="col-xs-3 code-block-alt letterSpacing0">
            &lt;div class="<b>letterSpacing5</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;This is 5px.<br />&lt;/div&gt;
         </div>
-        <div class="col-xs-3 text-bold  code-block-alt">
+        <div class="col-xs-3  code-block-alt">
           &lt;div class="<b>text-size20</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;This is 20px<br />&lt;/div&gt;
         </div>
-        <div class="col-xs-3 text-bold code-block-alt">
+        <div class="col-xs-3 code-block-alt">
           &lt;div class="<b>text-bold</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Bold<br />&lt;/div&gt;
         </div>
       </div>
-      <div class="row marginTop20 paddingLeft20 paddingRight20">
-        <div class="col-xs-3 text-bold">
+      <div class="row marginTop20 paddingLeft20 paddingRight20 text-bold">
+        <div class="col-xs-3">
           <span class="text-highlight-yellow">lineHeight@value</span><br/> <b>#</b> adjust line height %, the space between lines of text
         </div>
-        <div class="col-xs-3 text-bold ">
+        <div class="col-xs-3 ">
           <span class="text-highlight-yellow">letterSpacing@value</span> <br/> <b>#</b>adjust letter-spacing, ranging -5px to 10px
         </div>
-        <div class="col-xs-3 text-bold ">
+        <div class="col-xs-3 ">
           <span class="text-highlight-yellow">text-size@value</span><br/> <b>#</b> change the font size automagically
         </div>
-        <div class="col-xs-3 text-bold">
+        <div class="col-xs-3">
           <span class="text-highlight-yellow">text-@weight</span> <br/><b>#</b> change font thickness by adding weight you choose
         </div>
       </div>
@@ -217,29 +217,29 @@
           <h3 class="text-bold text-underline">Scale Text</h3>
         </div>
       </div>
-      <div class="row paddingLeft20 paddingRight20">
-        <div class="col-xs-3 text-bold border-simple-gray text-center">
+      <div class="row paddingLeft20 paddingRight20 text-bold">
+        <div class="col-xs-3 border-simple-gray text-center">
           Large [lg]<br/>
           <p class="text-size50 lineHeight75">Desktop</p>
           <p class="text-size45 lineHeight75">Laptop</p>
           <p class="text-size40 lineHeight100">Tablet</p>
           <p class="text-size35 lineHeight75">Phone</p>
         </div>
-        <div class="col-xs-3 text-bold  border-simple-gray text-center">
+        <div class="col-xs-3  border-simple-gray text-center">
           Medium [md]<br/>
           <p class="text-size40 lineHeight100">Desktop</p>
           <p class="text-size35 lineHeight75">Laptop</p>
           <p class="text-size30 lineHeight100">Tablet</p>
           <p class="text-size25 lineHeight75">Phone</p>
         </div>
-        <div class="col-xs-3 text-bold  border-simple-gray text-center">
+        <div class="col-xs-3  border-simple-gray text-center">
           Standard [sd]<br/>
           <p class="text-size15 lineHeight200">Desktop</p>
           <p class="text-size15 lineHeight100">Laptop</p>
           <p class="text-size14 lineHeight200">Tablet</p>
           <p class="text-size14 lineHeight75">Phone</p>
         </div>
-        <div class="col-xs-3 text-bold  border-simple-gray text-center">
+        <div class="col-xs-3  border-simple-gray text-center">
           Small [sm]<br/>
           <p class="text-size13 lineHeight175">Desktop</p>
           <p class="text-size12 lineHeight50">Laptop</p>
@@ -263,61 +263,103 @@
           </div>
       </div>
     </div>
-  <!-- FONT COLORS -->
+<!-- BORDERS -->
     <div class="row marginTop40">
       <div class="col-xs-12">
         <h3 class="text-bold text-underline">Borders</h3>
       </div>
     </div>
-    <div class="row paddingLeft20 paddingRight20">
-      <div class="col-xs-3 text-bold border-simple-pink text-right">
+    <div class="row paddingLeft20 paddingRight20 text-bold">
+      <div class="col-xs-3 border-simple-pink text-right">
         Simple Borders<br/>
         use any of the colors<br/>
         1px solid color
       </div>
-      <div class="col-xs-3 text-bold text-center border-simple-black border-remove-left border-remove-right">
+      <div class="col-xs-3 text-center border-simple-black border-remove-left border-remove-right">
         Border Side<br/>
         this box only<br/>
         has top and bottom
       </div>
-      <div class="col-xs-3 text-bold lineHeight125 border-color-green border-style-solid text-center border-size-8">
+      <div class="col-xs-3 lineHeight125 border-color-green border-style-solid text-center border-size-8">
         Border Width/Color<br/>
         thickness 1px-20px<br/>
         use any of the colors
       </div>
-      <div class="col-xs-3 text-bold  border-simple-blue border-style-dashed">
+      <div class="col-xs-3  border-simple-blue border-style-dashed">
         Border Style<br/>
         use any of the <br/>
         10 border styles
       </div>
     </div>
-    <div class="row marginTop20 paddingLeft20 paddingRight20 letterSpacing0">
-      <div class="col-xs-3 text-bold code-block-alt">
+    <div class="row marginTop20 paddingLeft20 paddingRight20 text-bold letterSpacing0">
+      <div class="col-xs-3 code-block-alt">
         &lt;div class="<br/><b>simple-border-pink</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Simplest border<br />&lt;/div&gt;
       </div>
-      <div class="col-xs-3 text-bold code-block-alt ">
+      <div class="col-xs-3 code-block-alt ">
          &lt;div class="<br/><b>simple-border-black <br/>border-remove-left<br/> border-remove-right</b>"&gt;<br/>&lt;/div&gt;
       </div>
-      <div class="col-xs-3 text-bold  code-block-alt">
+      <div class="col-xs-3  code-block-alt">
         &lt;div class="<br/><b>border-color-green <br/>border-style-solid <br/>border-size-8</b>"&gt;<br/>&lt;/div&gt;
       </div>
-      <div class="col-xs-3 text-bold code-block-alt">
+      <div class="col-xs-3 code-block-alt">
         &lt;div class="<br/><b>border-simple=blue<br/>border-style-dashed</b>"&gt;<br/>&lt;/div&gt;
       </div>
     </div>
-    <div class="row marginTop20 paddingLeft20 paddingRight20">
-      <div class="col-xs-3 text-bold">
-        <span class="text-highlight-yellow">simple-border-@color</span><br/> <b>#</b> add a 1px solid border of you chosen color
+    <div class="row marginTop20 paddingLeft20 paddingRight20  text-bold">
+      <div class="col-xs-3">
+        <span class="text-highlight-yellow">simple-border-@color</span><br/> <b>#</b> add a 1px solid border of your chosen color
       </div>
-      <div class="col-xs-3 text-bold ">
+      <div class="col-xs-3 ">
         <span class="text-highlight-yellow">border-remove-@side</span> <br/> <b>#</b>remove any of border(s): top, bottom, left, right
       </div>
-      <div class="col-xs-3 text-bold ">
+      <div class="col-xs-3 ">
         <span class="text-highlight-yellow">border-size-@value</span><br/> <b>#</b> set the border thickness<br/>
         <span class="text-highlight-yellow">border-color-@color</span><br/> <b>#</b> set the border color
       </div>
-      <div class="col-xs-3 text-bold">
+      <div class="col-xs-3">
         <span class="text-highlight-yellow">border-style-@style</span> <br/><b>#</b> change the border style, supports all ten styles
+      </div>
+    </div>
+<!-- Buttons -->
+    <div class="row marginTop40">
+      <div class="col-xs-12">
+        <h3 class="text-bold text-underline">Margin & Padding</h3>
+      </div>
+    </div>
+    <div class="row paddingLeft20 paddingRight20 text-bold">
+      <div class="col-xs-3 margin0 border-simple-gray">
+        Margin Size<br/>
+        all sides evenly<br/>
+        0px to 50px
+      </div>
+      <div class="col-xs-3 marginTop20 border-simple-gray">
+        Margin Target Side<br/>
+        this box only<br/>
+        top margin applied
+      </div>
+      <div class="col-xs-3 padding0 border-simple-gray">
+        Padding size<br/>
+        thickness 0px-50px<br/>
+        evenly applied
+      </div>
+      <div class="col-xs-3 paddingTop20 border-simple-gray">
+        Padding Target Side<br/>
+        this box only has <br/>
+        top padding targeted
+      </div>
+    </div>
+    <div class="row marginTop20 paddingLeft20 paddingRight20 text-bold letterSpacing0">
+      <div class="col-xs-3 code-block-alt">
+        &lt;div class="<b>margin0</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;...<br />&lt;/div&gt;
+      </div>
+      <div class="col-xs-3 code-block-alt ">
+         &lt;div class="<b>marginTop20</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;...<br/>&lt;/div&gt;
+      </div>
+      <div class="col-xs-3  code-block-alt">
+        &lt;div class="<b>padding0</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;...<br/>&lt;/div&gt;
+      </div>
+      <div class="col-xs-3 code-block-alt">
+        &lt;div class="<b>paddingTop20</b>"&gt;<br/>&lt;/div&gt;
       </div>
     </div>
   </div>
